--- a/PrintRFIDLabelFromMailSubject/PrintRFIDLabelFromMailSubject.csproj
+++ b/PrintRFIDLabelFromMailSubject/PrintRFIDLabelFromMailSubject.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
+    <PackageReference Include="Spire.Email" Version="3.2.0" />
+  </ItemGroup>
 
 </Project>
