--- a/PrintRFIDLabelFromMailSubject/PrintRFIDLabelFromMailSubject.csproj
+++ b/PrintRFIDLabelFromMailSubject/PrintRFIDLabelFromMailSubject.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
     <PackageReference Include="Spire.Email" Version="3.2.0" />
   </ItemGroup>
 
