--- a/PrintRFIDLabelFromMailSubject/PrintRFIDLabelFromMailSubject.csproj
+++ b/PrintRFIDLabelFromMailSubject/PrintRFIDLabelFromMailSubject.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0-preview.2.20160.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0-preview.2.20160.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
     <PackageReference Include="Spire.Email" Version="3.2.0" />
   </ItemGroup>
 
